k8s/chat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  namespace: apisix
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: apisix
  tls:
    - hosts:
        - chat.saurabhmate.cloud
      secretName: ingress-cert-manager-tls 
  rules:
  - host: chat.saurabhmate.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
